styles.css
* {
  margin: 0;
}

:root {
  --header-radius: 30px;

  --white-rgb: 253, 251, 248;
  --dim-white-rgb: 204, 199, 194;
  --gray-rgb: 56, 48, 48;
  --dim-gray-rgb: 45, 38, 38;
  --red-rgb: 139, 0, 0;
}

body {
  background-color: rgb(var(--dim-gray-rgb));

  font-size: 100%;
  font-family: "Georgia", Georgia, "Times New Roman", Times, serif;
  text-shadow: 0.05em 0 black, 0 0.05em black, -0.05em 0 black, 0 -0.05em black, -0.05em -0.05em black, -0.05em 0.05em black, 0.05em -0.05em black, 0.05em 0.05em black;
  color: rgb(var(--white-rgb));
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1.5rem;
}

h5 {
  font-size: 1.25rem;
}

h6 {
  font-size: 1.1rem;
}

p {
  font-size: 0.9rem;
  color: rgb(var(--dim-white-rgb));
}

.banner {
  position: sticky;
  top: 0;
  margin: 0;

  width: 100%;
  box-sizing: border-box;
  /* background-color: dimgray; */
}

.header {
  border-bottom: 2px solid rgb(var(--white-rgb));
  border-bottom-left-radius: var(--header-radius);
  border-bottom-right-radius: var(--header-radius);
  background-color: rgb(var(--red-rgb));
}

.align-right {
  text-align: right;
}

.align-left {
  text-align: left;
}

.title-container {
  margin-left: auto;
  margin-right: auto;
  padding: 20px;
}

.title {
  text-align: center;
  vertical-align: middle;
}

.tab-super {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  align-items: center;
}

.tab-container {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-evenly;
  align-items: center;
  flex: 1 1 auto;
}

.tab-container:first-of-type {
  min-width: calc(60% - 0.32px);
}

.tab-container:last-of-type {
  min-width: calc(40% - 0.48px);
}

.tab-container + .tab-container {
  border-left: solid 1px rgb(var(--white-rgb));
}

.tab {
  width: 100%;
  flex: 1 1 auto;
  position: relative;
  overflow: hidden;

  display: block;
  margin-left: auto;
  margin-right: auto;
}

.tab + .tab {
  border-left: solid 1px rgb(var(--white-rgb));
}

.tab-container:first-of-type > .tab:first-of-type {
  border-bottom-left-radius: var(--header-radius);
}

.tab-container:last-of-type > .tab:last-of-type {
  border-bottom-right-radius: var(--header-radius);
}

.tab-link {
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding: 5px;

  text-align: center;
  color: rgb(var(--white-rgb));
  text-decoration: none;
}

.tab-link:before {
  content: "";
  margin-left: -100%;
}

.tab-link:after {
  content: "";
  margin-right: -100%;
}

.tab:not(.active):hover {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.25), 80%, rgba(0, 0, 0, 0));
}

.tab:not(.active):active {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), 80%, rgba(0, 0, 0, 0));
}

.content {
  padding: 10px;
}

.section {
  margin-bottom: 5px;
  scroll-margin-top: 130px;
  scroll-snap-align: start;
}

.section + .section {
  margin-top: 15px;
}

.section-header {
  margin-bottom: 0.15em;
}

.section-header:not(:first-child) {
  margin-top: 0.5em;
}

.group {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  align-items: center;
}

.fill-pair {
  margin-left: auto;
  margin-right: auto;
  max-width: 50%;
  width: 100%;
}

.card {
  border-radius: 15px;
  background-color: rgb(var(--gray-rgb));

  margin: 5px;
  padding: 10px;
}

.card > .section-header {
  border-bottom: solid 2px rgb(var(--white-rgb));
}

.thumbnail {
  width: 13em;
  height: auto;
  float: left;

  margin: 5px 5px 0px 0px;
  border-radius: 5px;
}

.clearfix::after {
  content: "";
  display: block;
  clear: both;
}

.active {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.75), 80%, rgba(0, 0, 0, 0));
}

.active a {
  pointer-events: none;
  cursor: default;
}

.inline {
  display: inline;
}

.white {
  color: rgb(var(--white-rgb));
}

.off-white {
  color: rgb(var(--dim-white-rgb));
}

@media screen and (max-width: 992px) {
  .fill-pair {
    max-width: 100%;
  }
}

@media screen and (max-width: 600px) {
  .tab-container {
    width: 100%;
  }

  .tab-container + .tab-container {
    border-left: none;
    border-top: solid 1px rgb(var(--white-rgb));
  }

  .tab-container:first-of-type > .tab:first-of-type {
    border-bottom-left-radius: 0;
  }

  .tab-container:last-of-type > .tab:first-of-type {
    border-bottom-left-radius: var(--header-radius);
  }

  .tab-container:last-of-type > .tab:not(.active):hover {
    background: rgba(0, 0, 0, 0.25);
  }

  .tab-container:last-of-type > .tab:not(.active):active {
    background: rgba(0, 0, 0, 0.5);
  }
  
  .tab-container:last-of-type > .active {
    background: rgba(0, 0, 0, 0.75);
  }

  .thumbnail {
    width: 100%;
    margin: 5px 0px 5px;
  }
}

@media screen and (max-width: 600px),
       screen and (max-height: 600px) {
  .banner {
    position: relative;
  }

  .section {
    scroll-margin-top: 0px;
  }
}

